--- a/Beautiful_Soup_Parse_HTML_Kamus_Kawi_Indonesia.ipynb
+++ b/Beautiful_Soup_Parse_HTML_Kamus_Kawi_Indonesia.ipynb
@@ -287,8 +287,8 @@
         "<p>Selanjutnya bisa diedit di Microsoft Word dengan beberapa penyesuaian seperti menambahkan pendahuluan, memasukkan indeks, dan lainnya.\n",
         "\n",
         "Adapun untuk filenya bisa didownload di sini:<br />\n",
-        "<a href=\"https://sastra.org/\">Kamus Kawi Indonesia HTML</a> (File Hasil Scrap Dari Proses Ini)<br />\n",
-        "<a href=\"https://sastra.org/\">Kamus Kawi Indonesia PDF</a> (File Akhir Yang Telah Diedit dan Berbentuk PDF)<br />\n",
+        "<a href=\"https://github.com/adityahanif/portfolio/blob/main/file/Kamus%20Kawi%20Indonesia%20Capitalized.html/\">Kamus Kawi Indonesia HTML</a> (File Hasil Scrap Dari Proses Ini)<br />\n",
+        "<a href=\"https://github.com/adityahanif/portfolio/blob/main/file/Kamus%20Kawi%20Indonesia%20(capitalized).pdf/\">Kamus Kawi Indonesia PDF</a> (File Akhir Yang Telah Diedit dan Berbentuk PDF)<br />\n",
         "<br />\n",
         "Kami ucapkan terima kasih banyak kepada <a href=\"https://sastra.org/\">sastra.org</a><br />\n",
         "<br />\n",
