--- a/Beautiful_Soup_Parse_HTML_Kamus_Kawi_Indonesia.ipynb
+++ b/Beautiful_Soup_Parse_HTML_Kamus_Kawi_Indonesia.ipynb
@@ -19,8 +19,8 @@
       "cell_type": "markdown",
       "source": [
         "<h1>Kamus Bahasa Jawa</h1>\n",
-        "<p>Dibuat oleh: <a href=\"https://linkedin.com/n/adityahanif/\">Aditya Hanif</a>.
-        "\n"
+        "<p>Dibuat oleh: <a href=\"https://linkedin.com/n/adityahanif/\">Aditya Hanif</a>.",
+        "\n",
         "Pada kali ini saya akan membuat kamus bahasa kawi (bahasa jawa kuno) dengan bahan yang berasal dari website <a href=\"https://sastra.org/\">sastra.org</a>. Yang saya lakukan adalah dengan scrapping data yang terdapat pada website tersebut.\n",
         "\n",
         "Berikut adalah langkah-langkahnya.</p>\n",
